--- a/extensions/hello/languages/fi_FI/messages.po
+++ b/extensions/hello/languages/fi_FI/messages.po
@@ -1,59 +1,26 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Pagekit 1.0.0 (hello, messages)\n"
-"POT-Creation-Date: 2014-07-23 12:50+0000\n"
+"POT-Creation-Date: 2013-11-10 19:28+0000\n"
 "PO-Revision-Date: 2014-07-22 19:10+0200\n"
 "Last-Translator: Kehet <kehet@kehet.com>\n"
 "Language-Team: Kehet\n"
-"Language: fi_FI\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Poedit 1.6.6\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: fi_FI\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 
-#: extensions/hello/views/admin/link.razr:4
-#: extensions/hello/src/HelloLink.php:22
+#: extensions/hello/src/Pagekit/Hello/Controller/DefaultController.php:17
+msgid "Hello %name%"
+msgstr "Hei %name%"
+
+#: extensions/hello/src/Pagekit/Hello/Controller/DefaultController.php:27
+msgid "This Settings page is just for demonstration purposes."
+msgstr "Tämä asetussivu on ainoastaan esimerkkitarkoituksiin"
+
+#: extensions/hello/src/Pagekit/Hello/HelloMenu.php:24
 msgid "Hello World"
 msgstr "Hei maailma"
-
-#: extensions/hello/views/admin/settings.razr:9
-msgid "Message"
-msgstr ""
-
-#: extensions/hello/views/admin/settings.razr:15
-msgid "This settings page is just for demonstration purposes."
-msgstr ""
-
-#: extensions/hello/views/greet.razr:3
-msgid "{0}: No names|one: One name|more: %names% names"
-msgstr ""
-
-#: extensions/hello/views/greet.razr:7
-msgid "Hello %name%!"
-msgstr ""
-
-#: extensions/hello/views/widget.razr:1
-#: extensions/hello/src/HelloWidget.php:23
-msgid "Hello Widget!"
-msgstr ""
-
-#: extensions/hello/src/Controller/SiteController.php:37
-#: extensions/hello/src/Controller/SiteController.php:43
-msgid "View article"
-msgstr ""
-
-#: extensions/hello/src/HelloWidget.php:31
-msgid "Hello Demo Widget"
-msgstr ""
-
-#: extensions/hello/src/HelloWidget.php:47
-msgid "Hello Widget Form."
-msgstr ""
-
-#~ msgid "Hello %name%"
-#~ msgstr "Hei %name%"
-
-#~ msgid "This Settings page is just for demonstration purposes."
-#~ msgstr "Tämä asetussivu on ainoastaan esimerkkitarkoituksiin"
