--- a/extensions/installer/languages/fi_FI/messages.po
+++ b/extensions/installer/languages/fi_FI/messages.po
@@ -1,140 +1,129 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Pagekit 1.0.0 (installer, messages)\n"
-"POT-Creation-Date: 2014-07-23 12:50+0000\n"
+"POT-Creation-Date: 2013-11-06 15:49+0000\n"
 "PO-Revision-Date: 2014-07-22 19:09+0200\n"
 "Last-Translator: Kehet <kehet@kehet.com>\n"
 "Language-Team: Kehet\n"
-"Language: fi_FI\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Poedit 1.6.6\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: fi_FI\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 
-#: extensions/installer/views/install.razr:5
-#: extensions/installer/src/Controller/InstallerController.php:41
+#: extensions/installer/src/Pagekit/Installer/Controller/InstallerController.php:18
+#: extensions/installer/theme/templates/template.blade.php:5
 msgid "Pagekit Installer"
 msgstr "Pagekit asennus"
 
-#: extensions/installer/views/install.razr:24
-msgid "Begin"
-msgstr "Aloita"
-
-#: extensions/installer/views/install.razr:34
-msgid "Connect database"
-msgstr "Yhdistä tietokantaan"
-
-#: extensions/installer/views/install.razr:36
-msgid "Enter your database connection details."
-msgstr "Anna tietokantayhteyden tiedot"
-
-#: extensions/installer/views/install.razr:52
-msgid "Hostname"
-msgstr "Palvelin"
-
-#: extensions/installer/views/install.razr:55
-msgid "Host cannot be blank."
-msgstr "Palvelin ei voi olla tyhjä"
-
-#: extensions/installer/views/install.razr:63
-msgid "User cannot be blank."
-msgstr "Käyttäjä ei voi olla tyhjä"
-
-#: extensions/installer/views/install.razr:75
-msgid "Database Name"
-msgstr "Tietokannan nimi"
-
-#: extensions/installer/views/install.razr:78
-msgid "Database name cannot be blank."
-msgstr "Tietokannan nimi ei voi olla tyhjä"
-
-#: extensions/installer/views/install.razr:83
-#: extensions/installer/views/install.razr:92
-msgid "Table Prefix"
-msgstr "Taulujen etuliite"
-
-#: extensions/installer/views/install.razr:100
-#: extensions/installer/views/install.razr:145
-#: extensions/installer/views/install.razr:178
-msgid "Next"
-msgstr "Seuraava"
-
-#: extensions/installer/views/install.razr:111
-msgid "Create your account"
-msgstr "Luo tunnuksesi"
-
-#: extensions/installer/views/install.razr:113
-msgid "You will be the site administrator."
-msgstr "Tulet olemaan sivuston ylläpitäjä"
-
-#: extensions/installer/views/install.razr:121
-msgid "Username cannot be blank."
-msgstr "Käyttäjänimi ei voi olla tyhjä"
-
-#: extensions/installer/views/install.razr:132
-msgid "Password cannot be blank."
-msgstr "Salasana ei voi olla tyhjä"
-
-#: extensions/installer/views/install.razr:140
-msgid "Field must be a valid email address."
-msgstr ""
-
-#: extensions/installer/views/install.razr:156
-msgid "Setup your site"
-msgstr "Asenna sivusi"
-
-#: extensions/installer/views/install.razr:158
-msgid "Enter your website details."
-msgstr "Anna sivusi tiedot"
-
-#: extensions/installer/views/install.razr:166
-msgid "Site name cannot be blank."
-msgstr "Sivun nimi ei voi olla tyhjä"
-
-#: extensions/installer/views/install.razr:190
-msgid "Installing Pagekit..."
-msgstr "Asennetaan Pagekit ..."
-
-#: extensions/installer/views/install.razr:198
-msgid "Installation failed!"
-msgstr "Asennus epäonnistui!"
-
-#: extensions/installer/views/install.razr:207
-msgid "Retry"
-msgstr "Yritä uudelleen"
-
-#: extensions/installer/views/install.razr:213
-msgid "Finished!"
-msgstr "Valmis!"
-
-#: extensions/installer/views/install.razr:220
-msgid "Login now"
-msgstr "Kirjaudu sisään"
-
-#: extensions/installer/src/Controller/InstallerController.php:83
+#: extensions/installer/src/Pagekit/Installer/Controller/InstallerController.php:46
 msgid "Database connection failed!"
 msgstr "Tietokatayhteys epäonnistui!"
 
-#: extensions/installer/src/Controller/InstallerController.php:86
-msgid "Database access denied!"
-msgstr ""
-
-#: extensions/installer/src/Controller/InstallerController.php:109
+#: extensions/installer/src/Pagekit/Installer/Controller/InstallerController.php:66
 msgid "No database connection."
 msgstr "Ei tietokantayhteyttä"
 
-#: extensions/installer/src/Controller/InstallerController.php:168
+#: extensions/installer/src/Pagekit/Installer/Controller/InstallerController.php:112
 msgid "Can't write config."
 msgstr "Asetuksia ei voi kirjoittaa"
 
-#: extensions/installer/src/Controller/InstallerController.php:181
-msgid "Database error: %error%"
-msgstr ""
+#: extensions/installer/src/Pagekit/Installer/Controller/InstallerController.php:125
+msgid "DB user is missing required privileges."
+msgstr "Tietokannan käyttäjällä ei ole riittäviä käyttöoikeuksia"
 
-#~ msgid "DB user is missing required privileges."
-#~ msgstr "Tietokannan käyttäjällä ei ole riittäviä käyttöoikeuksia"
+#: extensions/installer/views/install.blade.php:13
+msgid "Begin"
+msgstr "Aloita"
 
-#~ msgid "Field must be a valid email adress."
-#~ msgstr "Sähköpostiosoitteen on oltava oikea"
+#: extensions/installer/views/install.blade.php:23
+msgid "Connect database"
+msgstr "Yhdistä tietokantaan"
+
+#: extensions/installer/views/install.blade.php:25
+msgid "Enter your database connection details."
+msgstr "Anna tietokantayhteyden tiedot"
+
+#: extensions/installer/views/install.blade.php:30
+msgid "Hostname"
+msgstr "Palvelin"
+
+#: extensions/installer/views/install.blade.php:33
+msgid "Host cannot be blank."
+msgstr "Palvelin ei voi olla tyhjä"
+
+#: extensions/installer/views/install.blade.php:41
+msgid "User cannot be blank."
+msgstr "Käyttäjä ei voi olla tyhjä"
+
+#: extensions/installer/views/install.blade.php:51
+msgid "Database Name"
+msgstr "Tietokannan nimi"
+
+#: extensions/installer/views/install.blade.php:54
+msgid "Database name cannot be blank."
+msgstr "Tietokannan nimi ei voi olla tyhjä"
+
+#: extensions/installer/views/install.blade.php:59
+msgid "Table Prefix"
+msgstr "Taulujen etuliite"
+
+#: extensions/installer/views/install.blade.php:64
+#: extensions/installer/views/install.blade.php:107
+#: extensions/installer/views/install.blade.php:140
+msgid "Next"
+msgstr "Seuraava"
+
+#: extensions/installer/views/install.blade.php:75
+msgid "Create your account"
+msgstr "Luo tunnuksesi"
+
+#: extensions/installer/views/install.blade.php:77
+msgid "You will be the site administrator."
+msgstr "Tulet olemaan sivuston ylläpitäjä"
+
+#: extensions/installer/views/install.blade.php:85
+msgid "Username cannot be blank."
+msgstr "Käyttäjänimi ei voi olla tyhjä"
+
+#: extensions/installer/views/install.blade.php:93
+msgid "Field must be a valid email adress."
+msgstr "Sähköpostiosoitteen on oltava oikea"
+
+#: extensions/installer/views/install.blade.php:102
+msgid "Password cannot be blank."
+msgstr "Salasana ei voi olla tyhjä"
+
+#: extensions/installer/views/install.blade.php:118
+msgid "Setup your site"
+msgstr "Asenna sivusi"
+
+#: extensions/installer/views/install.blade.php:120
+msgid "Enter your website details."
+msgstr "Anna sivusi tiedot"
+
+#: extensions/installer/views/install.blade.php:128
+msgid "Site name cannot be blank."
+msgstr "Sivun nimi ei voi olla tyhjä"
+
+#: extensions/installer/views/install.blade.php:152
+msgid "Installing Pagekit..."
+msgstr "Asennetaan Pagekit ..."
+
+#: extensions/installer/views/install.blade.php:160
+msgid "Installation failed!"
+msgstr "Asennus epäonnistui!"
+
+#: extensions/installer/views/install.blade.php:169
+msgid "Retry"
+msgstr "Yritä uudelleen"
+
+#: extensions/installer/views/install.blade.php:175
+msgid "Finished!"
+msgstr "Valmis!"
+
+#: extensions/installer/views/install.blade.php:182
+msgid "Login now"
+msgstr "Kirjaudu sisään"
