--- a/extensions/blog/languages/it_IT/messages.po
+++ b/extensions/blog/languages/it_IT/messages.po
@@ -2,16 +2,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Pagekit 0.8.3 (blog, messages)\n"
 "POT-Creation-Date: 2014-07-21 17:08+0000\n"
-"PO-Revision-Date: 2014-07-22 14:52+0100\n"
-"Last-Translator: Christopher Pecoraro <chrispecorard@gmail.com>\n"
+"PO-Revision-Date: 2014-07-30 19:05+0100\n"
+"Last-Translator: Christopher Pecoraro <chrispecoraro@gmail.com>\n"
 "Language-Team: Lionel Gaillard <chrispecoraro@gmail.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
-"X-Poedit-Language: Italian\n"
-"X-Poedit-Country: Italy\n"
 "X-Poedit-SourceCharset: utf-8\n"
+"Language: it_IT\n"
+"X-Generator: Poedit 1.5.4\n"
 
 #: extensions/blog/views/admin/comment/edit.razr:15
 #: extensions/blog/views/comment/respond.razr:23
@@ -55,7 +55,9 @@ msgstr "In risposta a"
 #: extensions/blog/views/admin/comment/table.razr:47
 #: extensions/blog/views/admin/post/table.razr:50
 msgid "{0} No pending|{1} One pending|]1,Inf[ %comments% pending"
-msgstr "{0} |{1} Un commentaire en attente |]1,Inf[ %comments% commentaires en attente"
+msgstr ""
+"{0} |{1} Un commentaire en attente |]1,Inf[ %comments% commentaires en "
+"attente"
 
 #: extensions/blog/views/admin/link/blog.razr:5
 msgid "Posts View"
@@ -190,7 +192,7 @@ msgstr "Aspetto"
 
 #: extensions/blog/views/admin/settings.razr:91
 msgid "Show Avatars from Gravatar."
-msgstr "Mostra avator da Gravatar."
+msgstr "Mostra avatar da Gravatar."
 
 #: extensions/blog/views/admin/settings.razr:94
 msgid "Order comments by"
@@ -257,8 +259,12 @@ msgid "{0} No comments|{1} %num% Comment|]1,Inf[ %num% Comments"
 msgstr "{0} Nessun commento|{1} Un commento|]1,Inf[ %num% Commenti"
 
 #: extensions/blog/src/BlogExtension.php:39
-msgid "You've made some changes! Leaving the post without saving will discard all changes."
-msgstr "Hai effetuate delle modifiche! Se lasci l'articolo senza salvare, perderai tutti i tuoi aggiornamenti."
+msgid ""
+"You've made some changes! Leaving the post without saving will discard all "
+"changes."
+msgstr ""
+"Hai effetuate delle modifiche! Se lasci l'articolo senza salvare, perderai "
+"tutti i tuoi aggiornamenti."
 
 #: extensions/blog/src/Controller/CommentController.php:106
 msgid "Comments on %title%"
@@ -274,11 +280,17 @@ msgstr "Commento creato."
 
 #: extensions/blog/src/Controller/CommentController.php:177
 msgid "{0} No comment deleted.|{1} Comment deleted.|]1,Inf[ Comments deleted."
-msgstr "{0} Nessun commento cancellato.|{1} Commento cancellato.|]1,Inf[ Commenti cancellati."
+msgstr ""
+"{0} Nessun commento cancellato.|{1} Commento cancellato.|]1,Inf[ Commenti "
+"cancellati."
 
 #: extensions/blog/src/Controller/CommentController.php:196
-msgid "{0} No comment status updated.|{1} Comment status updated.|]1,Inf[ Comment statuses updated."
-msgstr "{0} Nessun commento di status aggiornato.|{1} Il commento di status è stato aggiornato.|]1,Inf[ I commenti di status sono stati aggiornati."
+msgid ""
+"{0} No comment status updated.|{1} Comment status updated.|]1,Inf[ Comment "
+"statuses updated."
+msgstr ""
+"{0} Nessun commento di status aggiornato.|{1} Il commento di status è stato "
+"aggiornato.|]1,Inf[ I commenti di status sono stati aggiornati."
 
 #: extensions/blog/src/Controller/PostController.php:93
 msgid "Posts"
@@ -302,19 +314,28 @@ msgstr "L'articolo è stato creato."
 
 #: extensions/blog/src/Controller/PostController.php:173
 msgid "{0} No post deleted.|{1} Post deleted.|]1,Inf[ Posts deleted."
-msgstr "{0} Nessun articolo cancellato.|{1} L'articolo è stato cancellato.|]1,Inf[ I articolo sono stati cancellati."
+msgstr ""
+"{0} Nessun articolo cancellato.|{1} L'articolo è stato cancellato.|]1,Inf[ I "
+"articolo sono stati cancellati."
 
 #: extensions/blog/src/Controller/PostController.php:195
 msgid "{0} No post copied.|{1} Post copied.|]1,Inf[ Posts copied."
-msgstr "{0} Nessun articolo copiato.|{1} L'articolo è stato copiato.|]1,Inf[ I articolo sono stati copiati."
+msgstr ""
+"{0} Nessun articolo copiato.|{1} L'articolo è stato copiato.|]1,Inf[ I "
+"articolo sono stati copiati."
 
 #: extensions/blog/src/Controller/PostController.php:212
 msgid "{0} No post published.|{1} Post published.|]1,Inf[ Posts published."
-msgstr "{0} Nessun articolo pubblicato.|{1} L'articolo è stato pubblicato .|]1,Inf[ I articolo sono stati pubblicati."
+msgstr ""
+"{0} Nessun articolo pubblicato.|{1} L'articolo è stato pubblicato .|]1,"
+"Inf[ I articolo sono stati pubblicati."
 
 #: extensions/blog/src/Controller/PostController.php:214
-msgid "{0} No post unpublished.|{1} Post unpublished.|]1,Inf[ Posts unpublished."
-msgstr "{0} Nessun articolo pubblicato.|{1} L'articolo è stato pubblicato .|]1,Inf[ I articolo sono stati pubblicati."
+msgid ""
+"{0} No post unpublished.|{1} Post unpublished.|]1,Inf[ Posts unpublished."
+msgstr ""
+"{0} Nessun articolo nascosto.|{1} L'articolo è stato nascosto .|]1,Inf[ I "
+"articoli sono stati nascosti."
 
 #: extensions/blog/src/Controller/SiteController.php:64
 #: extensions/blog/src/Link/BlogLink.php:22
@@ -323,7 +344,8 @@ msgstr "Blog"
 
 #: extensions/blog/src/Controller/SiteController.php:93
 msgid "Please wait another %seconds% seconds before commenting again."
-msgstr "Si prega di attendere ancora %seconds% secondi prima di commentare di nuovo."
+msgstr ""
+"Si prega di attendere ancora %seconds% secondi prima di commentare di nuovo."
 
 #: extensions/blog/src/Controller/SiteController.php:102
 msgid "Comments have been disabled for this post."
@@ -384,4 +406,3 @@ msgstr "L'articolo con l'id \"%id%\" non è stato trovato!"
 #: extensions/blog/src/Event/RouteListener.php:106
 msgid "Post with slug \"%slug%\" not found!"
 msgstr "L'articolo con la slug \"%slug%\" non è stato trovato!"
-
