--- a/extensions/blog/languages/it_IT/messages.po
+++ b/extensions/blog/languages/it_IT/messages.po
@@ -2,21 +2,21 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Pagekit 0.8.3 (blog, messages)\n"
 "POT-Creation-Date: 2014-07-21 17:08+0000\n"
-"PO-Revision-Date: 2014-07-30 19:05+0100\n"
+"PO-Revision-Date: 2014-07-30 19:58+0100\n"
 "Last-Translator: Christopher Pecoraro <chrispecoraro@gmail.com>\n"
-"Language-Team: Lionel Gaillard <chrispecoraro@gmail.com>\n"
+"Language-Team: Christopher Pecoraro <chrispecoraro@gmail.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
-"X-Poedit-SourceCharset: utf-8\n"
+"X-Poedit-SourceCharset: UTF-8\n"
 "Language: it_IT\n"
 "X-Generator: Poedit 1.5.4\n"
 
 #: extensions/blog/views/admin/comment/edit.razr:15
 #: extensions/blog/views/comment/respond.razr:23
 msgid "E-mail"
-msgstr "email"
+msgstr "Email"
 
 #: extensions/blog/views/admin/comment/index.razr:15
 msgid "Approve"
@@ -24,7 +24,7 @@ msgstr "Approva"
 
 #: extensions/blog/views/admin/comment/index.razr:16
 msgid "Unapprove"
-msgstr "Disapproa"
+msgstr "Disapprova"
 
 #: extensions/blog/views/admin/comment/index.razr:17
 msgid "Mark as spam"
@@ -56,12 +56,12 @@ msgstr "In risposta a"
 #: extensions/blog/views/admin/post/table.razr:50
 msgid "{0} No pending|{1} One pending|]1,Inf[ %comments% pending"
 msgstr ""
-"{0} |{1} Un commentaire en attente |]1,Inf[ %comments% commentaires en "
-"attente"
+"{0} |{1} Un commento in attesa di approvazione |]1,Inf[ %comments% commenti "
+"in attesa di approvazione"
 
 #: extensions/blog/views/admin/link/blog.razr:5
 msgid "Posts View"
-msgstr "Lista dei articoli"
+msgstr "Vista dei articoli"
 
 #: extensions/blog/views/admin/link/blog.razr:15
 msgid "Post"
@@ -81,7 +81,7 @@ msgstr "Estratto"
 
 #: extensions/blog/views/admin/post/edit.razr:24
 msgid "Enter Excerpt"
-msgstr "Inserisci un estratto"
+msgstr "Inserisci Estratto"
 
 #: extensions/blog/views/admin/post/edit.razr:43
 #: extensions/blog/views/admin/post/table.razr:8
@@ -90,7 +90,7 @@ msgstr "Autore"
 
 #: extensions/blog/views/admin/post/edit.razr:53
 msgid "Publish on"
-msgstr "Pubblicato sul"
+msgstr "Pubblicare sul"
 
 #: extensions/blog/views/admin/post/edit.razr:73
 msgid "Slug"
@@ -103,11 +103,11 @@ msgstr "Abilita Commenti"
 #: extensions/blog/views/admin/post/index.razr:8
 #: extensions/blog/src/Controller/PostController.php:105
 msgid "Add Post"
-msgstr "Aggiungi un articolo"
+msgstr "Aggiungi un Articolo"
 
 #: extensions/blog/views/admin/post/index.razr:15
 msgid "Publish"
-msgstr "Publisci"
+msgstr "Pubblisci"
 
 #: extensions/blog/views/admin/post/index.razr:16
 msgid "Unpublish"
@@ -244,7 +244,7 @@ msgstr "Non sei autorizzato ad inserire commenti."
 
 #: extensions/blog/views/comment/respond.razr:49
 msgid "Please login to leave a comment."
-msgstr "Per piacere, fare login per lasciare un commento."
+msgstr "Per piacere, fai login per lasciare un commento."
 
 #: extensions/blog/views/post/index.razr:7
 msgid "Written by %name% on %date%"
@@ -263,7 +263,7 @@ msgid ""
 "You've made some changes! Leaving the post without saving will discard all "
 "changes."
 msgstr ""
-"Hai effetuate delle modifiche! Se lasci l'articolo senza salvare, perderai "
+"Hai effettuate delle modifiche! Se lasci l'articolo senza salvare, perderai "
 "tutti i tuoi aggiornamenti."
 
 #: extensions/blog/src/Controller/CommentController.php:106
