--- a/extensions/system/languages/ru_RU/messages.po
+++ b/extensions/system/languages/ru_RU/messages.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Pagekit 0.8.3 (system, messages)\n"
 "POT-Creation-Date: 2014-07-21 17:08+0000\n"
-"PO-Revision-Date: 2014-07-26 14:47+0400\n"
+"PO-Revision-Date: 2014-08-08 13:39+0400\n"
 "Last-Translator: Alex <admin@pagekitcommunity.ru>\n"
 "Language-Team: Pagekit Russian Comminity <admin@pagekitcommunity.ru>\n"
 "Language: ru_RU\n"
@@ -738,7 +738,7 @@ msgstr "С адреса"
 
 #: extensions/system/views/admin/settings/settings.razr:74
 msgid "From Name"
-msgstr "Адрес отправителя"
+msgstr "Имя отправителя"
 
 #: extensions/system/views/admin/settings/settings.razr:80
 msgid "Mailer"
