--- a/extensions/installer/languages/ru_RU/messages.po
+++ b/extensions/installer/languages/ru_RU/messages.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Pagekit 0.8.3 (installer, messages)\n"
 "POT-Creation-Date: 2013-11-06 15:49+0000\n"
-"PO-Revision-Date: 2014-07-22 15:53+0400\n"
-"Last-Translator: Alex <manager@pagekitcommunity.ru>\n"
+"PO-Revision-Date: 2014-08-09 19:21+0400\n"
+"Last-Translator: Alex <admin@pagekitcommunity.ru>\n"
 "Language-Team: Pagekit Russian Comminity <admin@pagekitcommunity.ru>\n"
 "Language: ru_RU\n"
 "MIME-Version: 1.0\n"
@@ -11,7 +11,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
-"X-Generator: Poedit 1.6.6\n"
+"X-Generator: Poedit 1.6.7\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 
 #: extensions/installer/src/Pagekit/Installer/Controller/InstallerController.php:18
@@ -90,7 +90,7 @@ msgid "Username cannot be blank."
 msgstr "Имя пользователя не может быть пустым."
 
 #: extensions/installer/views/install.blade.php:93
-msgid "Field must be a valid email adress."
+msgid "Field must be a valid email address."
 msgstr "Неверный формат email."
 
 #: extensions/installer/views/install.blade.php:102
