Russian Language Minor updates

--- a/extensions/blog/languages/ru_RU/messages.po
+++ b/extensions/blog/languages/ru_RU/messages.po
@@ -1,9 +1,9 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: Pagekit 0.8.3 (blog, messages)\n"
+"Project-Id-Version: Pagekit 0.8.5 (blog, messages)\n"
 "POT-Creation-Date: 2014-07-21 17:08+0000\n"
-"PO-Revision-Date: 2014-07-22 15:54+0400\n"
-"Last-Translator: Alex <manager@pagekitcommunity.ru>\n"
+"PO-Revision-Date: 2014-08-23 10:14+0400\n"
+"Last-Translator: Alex <admin@pagekitcommunity.ru>\n"
 "Language-Team: Pagekit Russian Comminity <admin@pagekitcommunity.ru>\n"
 "Language: ru_RU\n"
 "MIME-Version: 1.0\n"
@@ -11,7 +11,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
-"X-Generator: Poedit 1.6.6\n"
+"X-Generator: Poedit 1.6.7\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 
 #: extensions/blog/views/admin/comment/edit.razr:15
