--- a/extensions/hello/languages/ru_RU/messages.po
+++ b/extensions/hello/languages/ru_RU/messages.po
@@ -1,17 +1,17 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: Pagekit 1.0.0 (hello, messages)\n"
+"Project-Id-Version: Pagekit 0.8.5 (hello, messages)\n"
 "POT-Creation-Date: 2013-11-10 19:28+0000\n"
-"PO-Revision-Date: 2014-07-22 12:43+0400\n"
-"Last-Translator: Alex <manager@pagekitcommunity.ru>\n"
+"PO-Revision-Date: 2014-08-23 10:14+0400\n"
+"Last-Translator: Alex <admin@pagekitcommunity.ru>\n"
 "Language-Team: Pagekit Russian Comminity <admin@pagekitcommunity.ru>\n"
+"Language: ru_RU\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.6.6\n"
+"X-Generator: Poedit 1.6.7\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
-"Language: ru_RU\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 
 #: extensions/hello/src/Pagekit/Hello/Controller/DefaultController.php:17
