--- a/extensions/page/languages/ru_RU/messages.po
+++ b/extensions/page/languages/ru_RU/messages.po
@@ -1,9 +1,9 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: Pagekit 0.8.3 (page, messages)\n"
+"Project-Id-Version: Pagekit 0.8.5 (page, messages)\n"
 "POT-Creation-Date: 2014-07-21 17:09+0000\n"
-"PO-Revision-Date: 2014-07-25 17:23+0400\n"
-"Last-Translator: Alex <manager@pagekitcommunity.ru>\n"
+"PO-Revision-Date: 2014-08-23 10:13+0400\n"
+"Last-Translator: Alex <admin@pagekitcommunity.ru>\n"
 "Language-Team: Pagekit Russian Comminity <admin@pagekitcommunity.ru>\n"
 "Language: ru_RU\n"
 "MIME-Version: 1.0\n"
